test/bad/functions/call10.px

func f(Bool b) def
    return

f(b=true, b=true)
